--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <a href="badges.html">Check out</a>
                 </li>
                 <li>
-                    <a href="collapsible.html">Log In</a>
+                    <a href="#" id="login">Log In</a>
                 </li>
             </ul>
             <ul class="side-nav" id="mobile-demo">
@@ -106,11 +106,11 @@
 
 
     <!-- Compiled and minified JavaScript -->
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-        crossorigin="anonymous"></script>
-
+    <script src="https://www.gstatic.com/firebasejs/4.11.0/firebase.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
     <script src="app.js"></script>
+    <script src="login.js"></script>
 </body>
 
 </html>
