--- a/index.html
+++ b/index.html
@@ -53,19 +53,19 @@
         <div class="nav-content">
             <ul class="tabs tabs-transparent">
                 <li class="tab">
-                    <a href="#test1"> <i class="material-icons">home</i></a>
+                    <a href="#home"> <i class="material-icons">home</i></a>
                 </li>
                 <li class="tab">
-                    <a href="#test1">Tops</a>
+                    <a href="#t-shirts">T-shirts</a>
                 </li>
                 <li class="tab">
-                    <a class="active" href="#test2">Bottoms</a>
+                    <a href="#blouses">Blouses</a>
                 </li>
                 <li class="tab">
-                    <a href="#test3">Dresses</a>
+                    <a href="#dresses">Dresses</a>
                 </li>
                 <li class="tab">
-                    <a href="#test4">Lingerie</a>
+                    <a href="#jeans">Jeans</a>
                 </li>
             </ul>
         </div>
@@ -74,7 +74,12 @@
 
     <!-- main -->
     <main>
-
+        <section id="container"></section>
+        <!-- <div id="home" class="col s12"></div>
+        <div id="t-shirts" class="col s12">T-SHIRTS</div>
+        <div id="blouses" class="col s12">BLOUSES</div>
+        <div id="dresses" class="col s12">DRESSES</div>
+        <div id="jeans" class="col s12">JEANS</div> -->
     </main>
 
     <footer class="page-footer">
