añadiendo evento a las pestañas de productos

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </ul>
         </div>
         <div class="nav-content">
-            <ul class="tabs tabs-transparent">
+            <ul class="tabs tabs-transparent" id="menu">
                 <li class="tab">
                     <a href="#home"> <i class="material-icons">home</i></a>
                 </li>
