--- a/index.html
+++ b/index.html
@@ -52,20 +52,23 @@
         </div>
         <div class="nav-content">
             <ul class="tabs tabs-transparent" id="menu">
-                <li class="tab">
+                <li class="tab" data-menu="">
                     <a href="#home"> <i class="material-icons">home</i></a>
                 </li>
-                <li class="tab">
+                <li class="tab" data-menu="womens%20graphic%20tees">
                     <a href="#t-shirts">T-shirts</a>
                 </li>
-                <li class="tab">
+                <li class="tab" data-menu="blouse">
                     <a href="#blouses">Blouses</a>
                 </li>
-                <li class="tab">
+                <li class="tab" data-menu="dress%20for%20women">
                     <a href="#dresses">Dresses</a>
                 </li>
-                <li class="tab">
+                <li class="tab" data-menu="jeans%20woman">
                     <a href="#jeans">Jeans</a>
+                </li>
+                <li class="tab" data-menu="cardigan%20knit%20woman">
+                    <a href="#cardigans">Cardigans</a>
                 </li>
             </ul>
         </div>
