--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Venus</title>
 </head>
 
@@ -52,13 +52,10 @@
         </div>
         <div class="nav-content">
             <ul class="tabs tabs-transparent" id="menu">
-                <li class="tab" data-menu="">
-                    <a href="#home"> <i class="material-icons">home</i></a>
-                </li>
-                <li class="tab" data-menu="womens%20graphic%20tees">
+                <li class="tab" data-menu="womens%20graphic%20tees" data-category="t-shirts">
                     <a href="#t-shirts">T-shirts</a>
                 </li>
-                <li class="tab" data-menu="blouse">
+                <li class="tab" data-menu="blouse"data-category="blouses">
                     <a href="#blouses">Blouses</a>
                 </li>
                 <li class="tab" data-menu="dress%20for%20women">
@@ -77,45 +74,55 @@
 
     <!-- main -->
     <main>
-        <section id="container"></section>
-        <!-- <div id="home" class="col s12"></div>
-        <div id="t-shirts" class="col s12">T-SHIRTS</div>
-        <div id="blouses" class="col s12">BLOUSES</div>
-        <div id="dresses" class="col s12">DRESSES</div>
-        <div id="jeans" class="col s12">JEANS</div> -->
+        <section id="container">
+            <div id="t-shirts" class="col s12">T-SHIRTS</div>
+            <div id="blouses" class="col s12">BLOUSES</div>
+            <div id="dresses" class="col s12">DRESSES</div>
+            <div id="jeans" class="col s12">JEANS</div>
+            <div id="cardigans" class="col s12">CARDIGANS</div>
+        </section>
     </main>
 
     <footer class="page-footer">
-            <div class="container">
-              <div class="row">
+        <div class="container">
+            <div class="row">
                 <div class="col l6 s12">
-                  <h5 class="white-text">Footer Content</h5>
-                  <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+                    <h5 class="white-text">Footer Content</h5>
+                    <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
                 </div>
                 <div class="col l4 offset-l2 s12">
-                  <h5 class="white-text">Links</h5>
-                  <ul>
-                    <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-                    <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-                    <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-                    <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
-                  </ul>
+                    <h5 class="white-text">Links</h5>
+                    <ul>
+                        <li>
+                            <a class="grey-text text-lighten-3" href="#!">Link 1</a>
+                        </li>
+                        <li>
+                            <a class="grey-text text-lighten-3" href="#!">Link 2</a>
+                        </li>
+                        <li>
+                            <a class="grey-text text-lighten-3" href="#!">Link 3</a>
+                        </li>
+                        <li>
+                            <a class="grey-text text-lighten-3" href="#!">Link 4</a>
+                        </li>
+                    </ul>
                 </div>
-              </div>
             </div>
-            <div class="footer-copyright">
-              <div class="container">
-              © 2014 Copyright Text
-              <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
-              </div>
+        </div>
+        <div class="footer-copyright">
+            <div class="container">
+                © 2014 Copyright Text
+                <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
             </div>
-          </footer>
-              
+        </div>
+    </footer>
+
 
 
     <!-- Compiled and minified JavaScript -->
     <script src="https://www.gstatic.com/firebasejs/4.11.0/firebase.js"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
     <script src="app.js"></script>
     <script src="login.js"></script>
