--- a/index.html
+++ b/index.html
@@ -52,20 +52,20 @@
         </div>
         <div class="nav-content">
             <ul class="tabs tabs-transparent" id="menu">
-                <li class="tab" data-menu="womens%20graphic%20tees" data-category="t-shirts">
-                    <a href="#t-shirts">T-shirts</a>
+                <li class="tab">
+                    <a href="#t-shirts" data-menu="womens%20graphic%20tees" data-category="t-shirts">T-shirts</a>
                 </li>
-                <li class="tab" data-menu="blouse"data-category="blouses">
-                    <a href="#blouses">Blouses</a>
+                <li class="tab">
+                    <a href="#blouses" data-menu="blouse" data-category="blouses">Blouses</a>
                 </li>
-                <li class="tab" data-menu="dress%20for%20women">
-                    <a href="#dresses">Dresses</a>
+                <li class="tab">
+                    <a href="#dresses"data-menu="dress%20for%20women" data-category="dresses">Dresses</a>
                 </li>
-                <li class="tab" data-menu="jeans%20woman">
-                    <a href="#jeans">Jeans</a>
+                <li class="tab">
+                    <a href="#jeans"  data-menu="jeans%20woman" data-category="jeans">Jeans</a>
                 </li>
-                <li class="tab" data-menu="cardigan%20knit%20woman">
-                    <a href="#cardigans">Cardigans</a>
+                <li class="tab">
+                    <a href="#cardigans" data-menu="cardigan%20knit%20woman" data-category="cardigans">Cardigans</a>
                 </li>
             </ul>
         </div>
