--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 <body>
     <!-- Navbar -->
     <nav class="nav-extended">
-        <div class="nav-wrapper">
-            <a href="#" class="brand-logo">VENUS</a>
+        <div class="nav-wrapper black">
+            <img src="assets/images/venus.gif" class="logo" alt="logo">
+            <!-- <a href="#" class="brand-logo">VENUS</a> -->
             <a href="#" data-activates="mobile-demo" class="button-collapse">
                 <i class="material-icons">menu</i>
             </a>
@@ -30,9 +31,6 @@
                     <a href="badges.html">
                         <i class="material-icons">shopping_bascket</i>
                     </a>
-                </li>
-                <li>
-                    <a href="badges.html">Check out</a>
                 </li>
                 <li>
                     <a href="#" id="login">Log In</a>
@@ -75,11 +73,11 @@
     <!-- main -->
     <main>
         <section id="container">
-            <div id="t-shirts" class="col s12">T-SHIRTS</div>
-            <div id="blouses" class="col s12">BLOUSES</div>
-            <div id="dresses" class="col s12">DRESSES</div>
-            <div id="jeans" class="col s12">JEANS</div>
-            <div id="cardigans" class="col s12">CARDIGANS</div>
+            <div id="t-shirts" class="row">T-SHIRTS</div>
+            <div id="blouses" class="row">BLOUSES</div>
+            <div id="dresses" class="row">DRESSES</div>
+            <div id="jeans" class="row">JEANS</div>
+            <div id="cardigans" class="row">CARDIGANS</div>
         </section>
     </main>
 
