--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <title>Venus</title>
+    <script type="text/javascript" src="page.js"></script>
 </head>
 
 <body>
@@ -53,19 +54,19 @@
         <div class="nav-content">
             <ul class="tabs tabs-transparent" id="menu">
                 <li class="tab">
-                    <a href="#t-shirts" data-menu="womens%20graphic%20tees" data-category="t-shirts">T-shirts</a>
+                    <a href="#t-shirts" data-menu="womens%20graphic%20tees" data-category="t-shirts" class="router-tshirts">T-shirts</a>
                 </li>
                 <li class="tab">
-                    <a href="#blouses" data-menu="blouse" data-category="blouses">Blouses</a>
+                    <a href="#blouses" data-menu="blouse" data-category="blouses" class="router-blouses">Blouses</a>
                 </li>
                 <li class="tab">
-                    <a href="#dresses"data-menu="dress%20for%20women" data-category="dresses">Dresses</a>
+                    <a href="#dresses"data-menu="dress%20for%20women" data-category="dresses" class="router-dresses">Dresses</a>
                 </li>
                 <li class="tab">
-                    <a href="#jeans"  data-menu="jeans%20woman" data-category="jeans">Jeans</a>
+                    <a href="#jeans"  data-menu="jeans%20woman" data-category="jeans" class="router-jeans">Jeans</a>
                 </li>
                 <li class="tab">
-                    <a href="#cardigans" data-menu="cardigan%20knit%20woman" data-category="cardigans">Cardigans</a>
+                    <a href="#cardigans" data-menu="cardigan%20knit%20woman" data-category="cardigans" class="router-cardigans">Cardigans</a>
                 </li>
             </ul>
         </div>
