--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <a href="badges.html">Check out</a>
                 </li>
                 <li>
-                    <a href="#" id="login">Log In</a>
+                    <a href="#" id="login">Log In<span id="pseudo"></span></a>
                 </li>
             </ul>
             <ul class="side-nav" id="mobile-demo">
