--- a/index.html
+++ b/index.html
@@ -29,9 +29,13 @@
                     </a>
                 </li>
                 <li>
-                    <a href="badges.html">
-                        <i class="material-icons">shopping_bascket</i>
+                    <a href="#">
+                        <i class="material-icons dropdown-button btn" data-activates='cart'>shopping_bascket</i>
                     </a>
+                    <ul id='cart' class='dropdown-content'>
+                        <li><a href="#!">one</a></li>
+                        <li><a href="#!">two</a></li>
+                      </ul>
                 </li>
                 <li>
                     <a href="badges.html">Check out</a>
@@ -61,7 +65,6 @@
                     <a href="#blouses" data-menu="blouse" data-category="blouses" class="router-blouses">Blouses</a>
                 </li>
                 <li class="tab">
-
                     <a href="#dresses"data-menu="dress%20for%20women" data-category="dresses" class="router-dresses">Dresses</a>
                 </li>
                 <li class="tab">
@@ -146,7 +149,7 @@
         </footer>
 
 
-    
+
 
 
 
