suma del carrito de compras

--- a/index.html
+++ b/index.html
@@ -34,6 +34,17 @@
                             <i class="material-icons dropdown-button btn deep-orange lighten-4" data-activates='cart'>shopping_bascket</i>
                     </a>
                     <ul id='cart' class='dropdown-content'>
+                      <li class="deep-orange lighten-4">
+                        <div class="">My bag</div>
+                      </li>
+                      <li>
+                        <ul id='cart-detail'>
+
+                        </ul>
+                      </li>
+                      <li>
+                        <p>Total $<span class="total-cart">$$$</span></p>
+                      </li>
                     </ul>
                 </li>
                 <li>
