--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                 </li>
                 <li>
                     <a href="#" id="login">Log In</a>
+                    <span id="pseudo"></span>
                 </li>
             </ul>
             <ul class="side-nav" id="mobile-demo">
