Corrigiendo suma del carrito

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <!-- Navbar -->
     <nav class="nav-extended">
-        <div class="nav-wrapper deep-orange lighten-4">
+        <div class="nav-wrapper red lighten-5">
             <img src="assets/images/venus-light.png" class="logo" alt="logo">
             <!-- <a href="#" class="brand-logo">VENUS</a> -->
             <a href="#" data-activates="mobile-demo" class="button-collapse">
@@ -43,7 +43,7 @@
                         </ul>
                       </li>
                       <li>
-                        <p>Total $<span class="total-cart">$$$</span></p>
+                        <p>Total $<span class="total-cart">0.00</span></p>
                       </li>
                     </ul>
                 </li>
@@ -63,7 +63,7 @@
                 </li>
             </ul>
             </div>
-            <div class="nav-content">
+            <div class="nav-content black">
                 <ul class="tabs tabs-transparent" id="menu">
                     <li class="tab">
                         <a href="#home" class="">
@@ -95,7 +95,30 @@
     <main>
         <section id="container">
             <div id="home" class="row">
-            <div class="col l8 s12">
+                <!-- <div class="carousel carousel-slider center" data-indicators="true">
+                    <div class="carousel-fixed-item center">
+                        <img src="assets/images/editorial-venus.jpg" alt="">
+                        <a class="btn waves-effect white grey-text darken-text-2">button</a>
+                    </div>
+                    <div class="carousel-item red white-text" href="#one!">
+                        <h2>First Panel</h2>
+                        <p class="white-text">This is your first panel</p>
+                    </div>
+                    <div class="carousel-item amber white-text" href="#two!">
+                        <h2>Second Panel</h2>
+                        <p class="white-text">This is your second panel</p>
+                    </div>
+                    <div class="carousel-item green white-text" href="#three!">
+                        <h2>Third Panel</h2>
+                        <p class="white-text">This is your third panel</p>
+                    </div>
+                    <div class="carousel-item blue white-text" href="#four!">
+                        <h2>Fourth Panel</h2>
+                        <p class="white-text">This is your fourth panel</p>
+                    </div>
+                </div> -->
+
+                <div class="col l8 s12">
               <img src="assets/images/editorial-venus.jpg" alt="">
             </div>
             </div>
@@ -113,21 +136,21 @@
         <div class="modal-content">
             <div class="container">
                 <div class="row">
-                    <div class="col l5 s12">
-                        <img src="" alt="">
-                    </div>
-                    <div class="col l4 s12">
                         <h4 id="name"></h4>
+                    <div class="col l7 s12" id="photo-container">
+                        <img id='photo'src="" alt="">
+                    </div>
+                    <div class="col l5 s12">
                         <h5 id="price"></h5>
-                        <h5 id="materials"></h5>
-                        <p id="description"></p>
+                        <h6>SIZES</h6>
+                        <div>XS | S | M | L | XL</div>
                     </div>
                 </div>
 
             </div>
-            <div class="modal-footer">
+            <!-- <div class="modal-footer">
                 <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Agree</a>
-            </div>
+            </div> -->
         </div>
     </div>
 
