agregando estilos de tarjetas

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <!-- Navbar -->
     <nav class="nav-extended">
-        <div class="nav-wrapper red lighten-5">
+        <div class="nav-wrapper  pink">
             <img src="assets/images/venus-light.png" class="logo" alt="logo">
             <!-- <a href="#" class="brand-logo">VENUS</a> -->
             <a href="#" data-activates="mobile-demo" class="button-collapse">
@@ -30,8 +30,8 @@
                 </li>
                 <li>
                     <a href="#">
-                        <div class="nav-wrapper deep-orange lighten-4">
-                            <i class="material-icons dropdown-button btn deep-orange lighten-4" data-activates='cart'>shopping_bascket</i>
+                        <div class="nav-wrapper pink">
+                            <i class="material-icons dropdown-button btn black" data-activates='cart'>shopping_bascket</i>
                     </a>
                     <ul id='cart' class='dropdown-content'>
                         <li>
