--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
                     </ul>
                 </li>
                 <li>
-                    <a  id="login">Log In</a><span id="pseudo"></span
+                    <a href="#" id="login">Log In</a>
+                    <span id="pseudo"></span>
                 </li>
             </ul>
             <ul class="side-nav" id="mobile-demo">
@@ -85,8 +86,8 @@
         <section id="container">
             <div id="home" class="row">
             <div class="col l8 s12">
-              <!-- <img src="assets/images/editorial-venus.jpg" alt="">
-            </div> -->
+              <img src="assets/images/editorial-venus.jpg" alt="">
+            </div>
             </div>
             <!-- tabs] -->
             <div id="t-shirts" class="row"></div>
