--- a/index.html
+++ b/index.html
@@ -96,14 +96,12 @@
     <main>
         <section id="container">
             <div id="home" class="row">
-                <!-- <div class="carousel carousel-slider center" data-indicators="true">
+                <div class="carousel carousel-slider center" data-indicators="true">
                     <div class="carousel-fixed-item center">
-                        <img src="assets/images/editorial-venus.jpg" alt="">
-                        <a class="btn waves-effect white grey-text darken-text-2">button</a>
+                        <!-- <a class="btn waves-effect white grey-text darken-text-2">button</a> -->
                     </div>
                     <div class="carousel-item red white-text" href="#one!">
-                        <h2>First Panel</h2>
-                        <p class="white-text">This is your first panel</p>
+                        <img src="assets/images/editorial-venus.jpg" alt="">
                     </div>
                     <div class="carousel-item amber white-text" href="#two!">
                         <h2>Second Panel</h2>
@@ -117,11 +115,11 @@
                         <h2>Fourth Panel</h2>
                         <p class="white-text">This is your fourth panel</p>
                     </div>
-                </div> -->
-
+                </div>
+<!-- 
                 <div class="col l8 s12">
-              <img src="assets/images/editorial-venus.jpg" alt="">
-            </div>
+              <img src="assets/images/editorial-venus.jpg" alt=""  id="cover">
+            </div> -->
             </div>
             <!-- tabs] -->
             <div id="t-shirts" class="row"></div>
@@ -155,37 +153,41 @@
         </div>
     </div>
 
-    <footer class="page-footer">
+    <footer class="page-footer  blue darken-1">
         <div class="container">
             <div class="row">
                 <div class="col l6 s12">
-                    <h5 class="white-text">Footer Content</h5>
-                    <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+                    <h5 class="white-text">VENUS</h5>
+                    <p class="grey-text text-lighten-4">About us</p>
+                    <p class="grey-text text-lighten-4">Become a memeber</p>
+                    <p class="grey-text text-lighten-4">Gift card</p>
                 </div>
                 <div class="col l4 offset-l2 s12">
-                    <h5 class="white-text">Links</h5>
+                    <h5 class="white-text">Home</h5>
                     <ul>
                         <li>
-                            <a class="grey-text text-lighten-3" href="#!">Link 1</a>
+                            <a class="grey-text text-lighten-3" href="#t-shirts">T-shirts</a>
                         </li>
                         <li>
-                            <a class="grey-text text-lighten-3" href="#!">Link 2</a>
+                            <a class="grey-text text-lighten-3" href="#!">Blouses</a>
                         </li>
                         <li>
-                            <a class="grey-text text-lighten-3" href="#!">Link 3</a>
+                            <a class="grey-text text-lighten-3" href="#!">Dresses</a>
                         </li>
                         <li>
-                            <a class="grey-text text-lighten-3" href="#!">Link 4</a>
+                            <a class="grey-text text-lighten-3" href="#!">Jeans</a>
+                        </li>
+                        <li>
+                                <a class="grey-text text-lighten-3" href="#!">Cardigans</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </div>
 
-        <div class="footer-copyright">
-            <div class="container">
-                © 2014 Copyright Text
-                <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+        <div class="footer-copyright black">
+            <div class="container center">
+                © 2018 VENUS Copyright 
             </div>
         </div>
     </footer>
