--- a/index.html
+++ b/index.html
@@ -144,9 +144,11 @@
                     <div class="col l5 s12">
                         <h5 id="price"></h5>
                         <h6>SIZES</h6>
-                        <div>XS | S | M | L | XL</div>
+                        <span>XS | S | M | L | XL</span>
                     </div>
                 </div>
+                <a href="#" class="center" id="add-bag">Add to bag</a>
+
 
             </div>
             <!-- <div class="modal-footer">
