--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <!-- Navbar -->
     <nav class="nav-extended">
-        <div class="nav-wrapper deep-orange lighten-4">
+        <div class="nav-wrapper  pink">
             <img src="assets/images/venus-light.png" class="logo" alt="logo">
             <!-- <a href="#" class="brand-logo">VENUS</a> -->
             <a href="#" data-activates="mobile-demo" class="button-collapse">
@@ -30,8 +30,8 @@
                 </li>
                 <li>
                     <a href="#">
-                        <div class="nav-wrapper deep-orange lighten-4">
-                            <i class="material-icons dropdown-button btn deep-orange lighten-4" data-activates='cart'>shopping_bascket</i>
+                        <div class="nav-wrapper pink">
+                            <i class="material-icons dropdown-button btn black" data-activates='cart'>shopping_bascket</i>
                     </a>
                     <ul id='cart' class='dropdown-content'>
                       <li class="deep-orange lighten-4">
@@ -43,12 +43,14 @@
                         </ul>
                       </li>
                       <li>
-                        <p>Total $<span class="total-cart">$$$</span></p>
+                        <p>Total $<span class="total-cart">0.00</span></p>
+                        <div id="paypal-button-container"></div>
                       </li>
                     </ul>
                 </li>
                 <li>
-                    <a href="#" id="login">Log In</a>
+                    <a  id="login">Log In</a>
+                    <span id="pseudo"></span>
                 </li>
             </ul>
             <ul class="side-nav" id="mobile-demo">
@@ -63,7 +65,7 @@
                 </li>
             </ul>
             </div>
-            <div class="nav-content">
+            <div class="nav-content black">
                 <ul class="tabs tabs-transparent" id="menu">
                     <li class="tab">
                         <a href="#home" class="">
@@ -95,9 +97,30 @@
     <main>
         <section id="container">
             <div id="home" class="row">
-            <div class="col l8 s12">
-              <img src="assets/images/editorial-venus.jpg" alt="">
-            </div>
+                <div class="carousel carousel-slider center" data-indicators="true">
+                    <div class="carousel-fixed-item center">
+                        <!-- <a class="btn waves-effect white grey-text darken-text-2">button</a> -->
+                    </div>
+                    <div class="carousel-item red white-text" href="#one!">
+                        <img src="assets/images/editorial-venus.jpg" alt="">
+                    </div>
+                    <div class="carousel-item amber white-text" href="#two!">
+                        <h2>Second Panel</h2>
+                        <p class="white-text">This is your second panel</p>
+                    </div>
+                    <div class="carousel-item green white-text" href="#three!">
+                        <h2>Third Panel</h2>
+                        <p class="white-text">This is your third panel</p>
+                    </div>
+                    <div class="carousel-item blue white-text" href="#four!">
+                        <h2>Fourth Panel</h2>
+                        <p class="white-text">This is your fourth panel</p>
+                    </div>
+                </div>
+<!--
+                <div class="col l8 s12">
+              <img src="assets/images/editorial-venus.jpg" alt=""  id="cover">
+            </div> -->
             </div>
             <!-- tabs] -->
             <div id="t-shirts" class="row"></div>
@@ -113,63 +136,62 @@
         <div class="modal-content">
             <div class="container">
                 <div class="row">
-                    <div class="col l5 s12">
-                        <img src="" alt="">
-                    </div>
-                    <div class="col l4 s12">
                         <h4 id="name"></h4>
+                    <div class="col l7 s12" id="photo-container">
+                        <img id='photo'src="" alt="">
+                    </div>
+                    <div class="col l5 s12">
                         <h5 id="price"></h5>
-                        <h5 id="materials"></h5>
-                        <p id="description"></p>
+                        <h6>SIZES</h6>
+                        <div>XS | S | M | L | XL</div>
                     </div>
                 </div>
 
             </div>
-            <div class="modal-footer">
+            <!-- <div class="modal-footer">
                 <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Agree</a>
-            </div>
+            </div> -->
         </div>
     </div>
 
-    <footer class="page-footer">
+    <footer class="page-footer  blue darken-1">
         <div class="container">
             <div class="row">
                 <div class="col l6 s12">
-                    <h5 class="white-text">Footer Content</h5>
-                    <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+                    <h5 class="white-text">VENUS</h5>
+                    <p class="grey-text text-lighten-4">About us</p>
+                    <p class="grey-text text-lighten-4">Become a memeber</p>
+                    <p class="grey-text text-lighten-4">Gift card</p>
                 </div>
                 <div class="col l4 offset-l2 s12">
-                    <h5 class="white-text">Links</h5>
+                    <h5 class="white-text">Home</h5>
                     <ul>
                         <li>
-                            <a class="grey-text text-lighten-3" href="#!">Link 1</a>
+                            <a class="grey-text text-lighten-3" href="#t-shirts">T-shirts</a>
                         </li>
                         <li>
-                            <a class="grey-text text-lighten-3" href="#!">Link 2</a>
+                            <a class="grey-text text-lighten-3" href="#!">Blouses</a>
                         </li>
                         <li>
-                            <a class="grey-text text-lighten-3" href="#!">Link 3</a>
+                            <a class="grey-text text-lighten-3" href="#!">Dresses</a>
                         </li>
                         <li>
-                            <a class="grey-text text-lighten-3" href="#!">Link 4</a>
+                            <a class="grey-text text-lighten-3" href="#!">Jeans</a>
+                        </li>
+                        <li>
+                                <a class="grey-text text-lighten-3" href="#!">Cardigans</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </div>
 
-        <div class="footer-copyright">
-            <div class="container">
-                © 2014 Copyright Text
-                <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+        <div class="footer-copyright black">
+            <div class="container center">
+                © 2018 VENUS Copyright
             </div>
         </div>
     </footer>
-
-
-
-
-
 
 
     <!-- Compiled and minified JavaScript -->
@@ -177,6 +199,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+    <script src="https://www.paypalobjects.com/api/checkout.js"></script>
     <script src="app.js"></script>
     <script src="login.js"></script>
 </body>
