--- a/index.html
+++ b/index.html
@@ -107,16 +107,7 @@
                         <img src="assets/images/editorial-venus.jpg" alt="">
                     </div>
                     <div class="carousel-item amber white-text" href="#two!">
-                        <h2>Second Panel</h2>
-                        <p class="white-text">This is your second panel</p>
-                    </div>
-                    <div class="carousel-item green white-text" href="#three!">
-                        <h2>Third Panel</h2>
-                        <p class="white-text">This is your third panel</p>
-                    </div>
-                    <div class="carousel-item blue white-text" href="#four!">
-                        <h2>Fourth Panel</h2>
-                        <p class="white-text">This is your fourth panel</p>
+                        <img src="assets/images/editorial-venus2.jpg" alt="">
                     </div>
                 </div>
 
