agregando cart title

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                  </a>
                     <ul id='cart' class='dropdown-content'>
                         <li class="deep-orange lighten-4">
-                            <div class="">My bag</div>
+                            <div class="">My cart</div>
                         </li>
                         <li>
                             <ul id='cart-detail'>
