cambios en index

--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
                       </li>
                       <li>
                         <p>Total $<span class="total-cart">0.00</span></p>
-                        <div id="paypal-button-container"></div>
                       </li>
                     </ul>
                 </li>
@@ -117,8 +116,8 @@
                         <p class="white-text">This is your fourth panel</p>
                     </div>
                 </div>
-
-<!-- <div class="col l8 s12">
+<!-- 
+                <div class="col l8 s12">
               <img src="assets/images/editorial-venus.jpg" alt=""  id="cover">
             </div> -->
             </div>
@@ -137,18 +136,14 @@
             <div class="container">
                 <div class="row">
                         <h4 id="name"></h4>
-                        <div class="col l7 s12" id="photo-container">
-                            <img id='photo'src="" alt="">
-                        </div>
-                        <div class="col l5 s12">
-                            <h5 id="price"></h5>
-                            <h6>SIZES</h6>
-                            <span>XS | S | M | L | XL</span>
-                        </div>
+                    <div class="col l7 s12" id="photo-container">
+                        <img id='photo'src="" alt="">
                     </div>
-                    <a href="#" class="center" id="add-bag">Add to bag</a>
-
-                   
+                    <div class="col l5 s12">
+                        <h5 id="price"></h5>
+                        <h6>SIZES</h6>
+                        <div>XS | S | M | L | XL</div>
+                    </div>
                 </div>
 
             </div>
@@ -192,8 +187,7 @@
 
         <div class="footer-copyright black">
             <div class="container center">
-                © 2018 VENUS Copyright
-
+                © 2018 VENUS Copyright 
             </div>
         </div>
     </footer>
@@ -204,7 +198,6 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-    <script src="https://www.paypalobjects.com/api/checkout.js"></script>
     <script src="app.js"></script>
     <script src="login.js"></script>
 </body>
