--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 
         <div class="footer-copyright black">
             <div class="container center">
-                © 2018 VENUS Copyright 
+                © 2018 VENUS Copyright
             </div>
         </div>
     </footer>
@@ -223,6 +223,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+    <script src="https://www.paypalobjects.com/api/checkout.js"></script>
     <script src="app.js"></script>
     <script src="login.js"></script>
 </body>
